fix: font-size and alignment changes for departure times, crowding

--- a/assets/css/v2/bus_shelter/departures/time.scss
+++ b/assets/css/v2/bus_shelter/departures/time.scss
@@ -8,6 +8,10 @@
   &:not(:first-child) {
     margin-top: 16px;
   }
+
+  .departure-time {
+    width: 151px;
+  }
 }
 
 .departure-time {
